--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,27 @@
 
 .header-nav {
   display: flex;
+  justify-content: flex-start;
+  padding: 10px;
 }
 
 .header-nav_pages {
   list-style: none;
+  display: flex;
+  align-items: center;
+  width: 800px;
+  justify-content: space-between;
+  font-size: 20px;
 }
+
+.login-start {
+  list-style: none;
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  margin-right: 2px;
+}
+
+.start-button
