--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
   display: flex;
   align-items: center;
   width: 800px;
-  justify-content: space-between;
+  justify-content: space-around;
   font-size: 20px;
 }
 
@@ -21,10 +21,20 @@
   list-style: none;
   display: flex;
   align-items: center;
+  justify-content: flex-end;
+  width: 200px;
 }
 
 .logo {
   margin-right: 2px;
 }
 
-.start-button
+.start-button {
+  border-radius: 15px;
+  height: 40px;
+  width: 120px;
+  background-color: hsl(161deg 63% 53%);
+  color: white;
+  border: none;
+  margin: 0px 0px 0px 20px;
+}
